--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,8 @@
   AddHandler application/x-httpd-ea-php82___lsphp .php .php8 .phtml
 </IfModule>
 # php -- END cPanel-generated handler, do not edit
+
+<Files "Deployer.py">
+    Order allow,deny
+    Deny from all
+</Files>
