Created index to home alias

--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,10 @@
     Order allow,deny
     Deny from all
 </Files>
+
+Alias / /home/
+<Directory /home/>
+    Options Indexes FollowSymLinks
+    AllowOverride None
+    Require all granted
+</Directory>
